<resources>
    <string name="app_name">PONG_Group</string>
    <string name="classic">CLASSIC</string>
    <string name="normal">NORMAL</string>
    <string name="pong">PONG</string>
    <string name="breakout">BREAKOUT</string>
    <string name="high_score">high score</string>
    <string name="settings">Settings</string>
    <string name="breakout_game">Breakout game</string>
    <string name="pong_game">Pong game</string>
    <string name="game_over_text">%1$s</string>
    <string name="score_text">Scores: %d</string>
    <string name="lives_text">Lives: %d</string>
    <string name="level_text">Level: %d</string>
    <string name="high_scores_text">High Scores: %d</string>
    <string name="sound">SOUND</string>
    <string name="color">COLOR</string>
    <string name="rainbow">RAINBOW</string>
    <string name="version">VERSION</string>
    <string name="opponent">OPPONENT</string>
    <string name="cpu">CPU</string>
    <string name="p2">P2</string>
    <string name="first_to">FIRST TO</string>
    <string name="level">LEVEL</string>
    <string name="infinite">INFINITE</string>
    <string name="rank">RANK</string>
    <string name="name">NAME</string>
    <string name="name_hint">---</string>
    <string name="warning">!</string>
    <string name="score_view">SCORE</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>
    <string name="backgroundImage">Background image</string>
    <string name="_0">0</string>
</resources>