<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/space"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".controller.NameInputActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arcade_classic"
        android:gravity="center_horizontal"
        android:text="@string/rank"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_input_screen" />

    <TextView
        android:id="@+id/rank_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arcade_classic"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_input_screen" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:fontFamily="@font/arcade_classic"
        android:gravity="center_horizontal"
        android:text="@string/score_view"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_input_screen" />

    <TextView
        android:id="@+id/score_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arcade_classic"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_input_screen" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:fontFamily="@font/arcade_classic"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_input_screen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_input_screen"
        android:gravity="center_horizontal">

        <Space
            android:layout_width="@dimen/warning_diameter"
            android:layout_height="0dp" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/arcade_classic"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:autofillHints="username"
            android:letterSpacing="0.35"
            android:maxLength="3"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_input_screen" />

        <androidx.cardview.widget.CardView
            android:id="@+id/warning"
            android:layout_width="@dimen/warning_diameter"
            android:layout_height="@dimen/warning_diameter"
            android:layout_gravity="center_vertical"
            app:cardCornerRadius="50dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/red"
                android:fontFamily="@font/arcade_classic"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/warning"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_warning" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="10dp"
            android:layout_marginEnd="40dp">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:clickable="true"
                android:fontFamily="@font/pong"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_submit"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:clickable="true"
                android:fontFamily="@font/pong"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_submit" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>